Correção de acesso para porta 80

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.username=postgres
 spring.datasource.password=postgrespwd
 spring.jpa.show-sql=true
 
-#Flyway related propoerties
+#Server related propoerties
+server.port=80
